--- a/templates/base.html
+++ b/templates/base.html
@@ -17,11 +17,12 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">Testlar</a>
+                
+                {% if user.is_authenticated %}
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                     aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                {% if user.is_authenticated %}
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
@@ -45,6 +46,7 @@
                                     <img src="{% if user.image %}{{user.image.url}}{% else %}https://banner2.cleanpng.com/20180816/syp/78f04442f328b673e733de33b6c8a781.webp{% endif %}" class="rounded-circle" width="30" height="30" alt="sss"> {{user.full_name}}
                                 </a>
                                 <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="/profile/{{user.username}}/">Profil</a></li>
                                     <li><a class="dropdown-item text-danger" href="/logout/">Chiqib ketish</a></li>
                                 </ul>
                             </li>
@@ -53,8 +55,8 @@
                 </div>
                 {% else %}
                 <div class="navbar-text">
-                    <a href="/login/" class="btn btn-outline-success me-2">Kirish</a>
-                    <a href="/register/" class="btn btn-outline-primary me-2">Ro'yxatdan o'tish</a>
+                    <a href="/login/" class="btn btn-outline-success me-2 rounded-pill">Kirish</a>
+                    <a href="/register/" class="btn btn-outline-primary me-2 rounded-pill">Ro'yxatdan o'tish</a>
                 </div>
                 {% endif %}
             </div>
@@ -68,6 +70,8 @@
     </div>
 
 
+
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
