--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,75 @@
 {% endblock title %}
 
 {% block content %}
-    <div class="card p-3">
-        Salom Dunyo
+{% if not user.is_authenticated %}
+    <div class="p-3">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="p-4  h-100 d-flex flex-column justify-content-center">
+                    <span class="text-success" style="font-weight: 700;">Biz bilan ko'proq o'rganing</span>
+                    <h1>
+                        Dunyodagi barcha eshiklarning kaliti bilimdir!
+                    </h1>
+                    <div>
+                        Siz bizning platdorma orqali o'qituvchilar tomonidan joylashtirilgan testlar va blok testlarni yechishingiz va ulardan olgan natijangizni korib o'zingizni tahlil qilishingiz mumkin!
+                    </div>
+                    <div>
+                        <a href="/login/" class="btn btn-primary mt-3 rounded-pill">Hoziroq boshlash</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="p-4">
+                    <img src="/static/images/all.png" alt="Bosh sahifa" width="100%">
+                </div>
+            </div>
+        </div>
     </div>
+    <footer class="bg-dark text-center text-lg-start p-3 position-fixed bottom-0 w-100 text-white" style="margin-top: 40px;"></footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    &copy; 2024 Copyright: Blok testlar
+                </div>
+                <div class="col-md-6 text-end">
+                    <ul class="list-inline mb-0">
+                        <li class="list-inline-item me-3"><a href="#" style="text-decoration: none;" class="text-info">Test yaratish</a></li>
+                        <li class="list-inline-item me-3"><a href="#" style="text-decoration: none;" class="text-info">Aloqaga chiqish</a></li>
+                        <li class="list-inline-item me-3"><a href="#" style="text-decoration: none;" class="text-info">Xato xaqida xabar berish</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+{% else %}
+<div class="card p-3">
+    <h4>Boshlanmagan blok testlar</h4>
+    <div class="table-responsive mt-3">
+        <table class="table table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th class="p-3">Test nomi</th>
+                    <th class="p-3">Testni boshlanish vaqti</th>
+                    <th class="p-3">Test davomiyligi</th>
+                    <th class="p-3">Fanlar</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for blog_test in blog_tests %}
+                <tr style="cursor: pointer;" onclick="location.href='/blog-tests/{{ blog_test.id }}';">
+                    <td class="p-3">{{ blog_test.title }}</td>
+                    <td class="p-3">{{blog_test.start_date|date:"d.m.Y H:i"}}</td>
+                    <td>{{blog_test.countinuis_time|time:"H:i:s"}}</td>
+                    <td class="p-3">{{blog_test.scinces}}</td>
+                </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="4" class="text-center p-3">Hozirda blok testlar mavjud emas.</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+{% endif %}
 {% endblock content %}
