--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -5,14 +5,21 @@
 {% endblock title %}
 
 {% block content %}
+<style>
+</style>
     <img src="/static/images/profile_cover.jpg" alt="Profile cover" style="object-fit: cover;border-radius: 10px;filter: blur(1px);" class="bg-gradient-primary" width="100%" height="250px">
     <div class="position-relative">
         <div class="position-absolute" style="top: -50px;left: 10px;right: 10px;">
             <div class="card p-3">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 mb-3">
                         <div class="d-flex align-items-center gap-2">
-                            <img src="{% if profile.image %}{{profile.image.url}}{% else %}/static/images/all.png{% endif %}" alt="Profile picture" class="rounded-circle" width="60px" height="60px">
+                            <img src="{% if profile.image %}{{profile.image.url}}{% else %}/static/images/all.png{% endif %}" onclick="document.querySelector('#profile_image').click()" alt="Profile picture" class="rounded-circle" style="cursor: pointer;" width="100px" height="100px">
+                            {% if user == profile %}
+                            <form method="post" enctype="multipart/form-data" action="/profile/{{profile.username}}/update-image/">{% csrf_token %}
+                                <input type="file" accept="image/*" id="profile_image" name="image" style="display: none;" onchange="this.parentNode.submit()">
+                            </form>
+                            {% endif %}
                             <div>
                                 <h4 class="mb-0">{{profile.full_name}}</h4>
                                 <span class="text-muted" style='font-size: 14px;'>{{profile.email}}</span>
