--- a/templates/quizes/quiz.html
+++ b/templates/quizes/quiz.html
@@ -169,7 +169,11 @@
         event.preventDefault();
     });
 
-    
+    document.querySelectorAll('a').forEach(el=>{
+        if (!el.href.includes('#test-')){
+            el.href = '#';
+        }
+    })
 </script>
 {% endblock content %}
 
