--- a/templates/quizes/results.html
+++ b/templates/quizes/results.html
@@ -9,7 +9,7 @@
 {% block content %}
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h1>Natijalar</h1>
-        <a href="/tests/{{quiz.id}}/results/download/" download class="btn btn-primary">Yuklab olish</a>
+        <a href="/tests/{{quiz.id}}/results/download/" class="btn btn-primary">Yuklab olish</a>
     </div>
     <div class="table-responsive">
         <table class="table table-striped">
