--- a/templates/quizes/quiz.html
+++ b/templates/quizes/quiz.html
@@ -6,22 +6,23 @@
 
 {% block content %}
 <style>
-    *{
+    * {
         user-select: none !important;
     }
-    p{
+
+    p {
         display: inline;
     }
 </style>
-<div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+<div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-body text-center">
                 Rostdan ham ushbu testni yakunlamoqchimisiz?
                 <div class="mt-3">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Yopish</button>
-                <button type="button" class="btn btn-primary" id="submit_btn"  data-bs-dismiss="modal">Yakunlash</button>
+                    <button type="button" class="btn btn-primary" id="submit_btn"
+                        data-bs-dismiss="modal">Yakunlash</button>
                 </div>
             </div>
         </div>
@@ -40,7 +41,7 @@
             </div>
             <button class="btn btn-primary mb-3 mt-3" type="button" data-bs-toggle="modal"
                 data-bs-target="#exampleModal1">Yakunlash</button>
-            
+
         </div>
     </div>
     <div class="col-md-9">
@@ -64,12 +65,35 @@
                     {% endfor %}
                 </div>
                 {% endif %}
+                <div class="modal fade" tabindex="-1" id="sendBug{{question.id}}">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Xato haqida xabar berish</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <form class="modal-body">
+                                <input type="number" name="question_id" value="{{question.id}}" hidden>
+                                <label for="debug">Xatoni yozing</label>
+                                <textarea class="form-control" id="debug" style="max-height: 150px;" placeholder="Xatoni yozing"></textarea>
+                            </form>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary"
+                                    data-bs-dismiss="modal">Yopish</button>
+                                <button type="button" class="btn btn-primary send-feedback" data-id="{{question.id}}">Yuborish</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-end">
+                    <button class="btn btn-sm" id="feedback_btn{{question.id}}" type="button" data-bs-toggle="modal" data-bs-target="#sendBug{{question.id}}">Xato haqida xabar berish</button>
+                </div>
             </section>
             {% endfor %}
         </div>
     </div>
-
-    <div id="error_modal" class="modal" tabindex="-1"  data-bs-backdrop="static">
+    <div id="error_modal" class="modal" tabindex="-1" data-bs-backdrop="static">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -89,7 +113,7 @@
         </div>
     </div>
 
-    <div id="info_modal" class="modal" tabindex="-1"  data-bs-backdrop="static">
+    <div id="info_modal" class="modal" tabindex="-1" data-bs-backdrop="static">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -148,29 +172,30 @@
                 const minutes = Math.floor((timeLeft / (1000 * 60)) % 60);
                 const seconds = Math.floor((timeLeft / 1000) % 60);
 
-                document.getElementById('timer').textContent = 
+                document.getElementById('timer').textContent =
                     `${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
             } else {
                 document.getElementById('timer').textContent = "Time's up!";
                 clearInterval(timerInterval);
+                sendData(true)
             }
         }
 
         const timerInterval = setInterval(updateTimer, 1000);
     }
 
-    window.onload = function() {
+    window.onload = function () {
         const start_time = "{{ start_time.date_created|date:'c' }}";
         const duration = "{{ quiz.countinuis_time|date:'H:i:s' }}";
 
         startTimer(start_time, duration);
     };
-    document.addEventListener('contextmenu', function(event) {
+    document.addEventListener('contextmenu', function (event) {
         event.preventDefault();
     });
 
-    document.querySelectorAll('a').forEach(el=>{
-        if (!el.href.includes('#test-')){
+    document.querySelectorAll('a').forEach(el => {
+        if (!el.href.includes('#test-')) {
             el.href = '#';
         }
     })
@@ -178,38 +203,86 @@
 {% endblock content %}
 
 {% block js %}
-    <script>
-        var modal1 = new bootstrap.Modal(document.getElementById('error_modal'));
-        window.addEventListener('blur', e=>{
-            e.preventDefault();
-            modal1.show();
-        })
+<script>
+    var modal1 = new bootstrap.Modal(document.getElementById('error_modal'));
+    window.addEventListener('blur', e => {
+        e.preventDefault();
+        modal1.show();
+    })
 
-        function sendData(){
-            if(Object.values(tests).length!==parseInt("{{questions.count}}")){
-                document.getElementById('error_modal_body').innerHTML = "Testni yakunlash uchun barcha variantlarni tanlang.";
+    function sendData(time_up=False) {
+        if (Object.values(tests).length !== parseInt("{{questions.count}}") && !time_up) {
+            document.getElementById('error_modal_body').innerHTML = "Testni yakunlash uchun barcha variantlarni tanlang.";
+            var modal2 = new bootstrap.Modal(document.getElementById('error_modal'));
+            modal2.show();
+            return;
+        }
+        var modal3 = new bootstrap.Modal(document.getElementById('info_modal'));
+        modal3.show();
+        tests['csrfmiddlewaretoken'] = "{{ csrf_token }}";
+        $.ajax({
+            url: "/tests/{{quiz.id}}/submit/",
+            type: "POST",
+            data: tests,
+            success: function (response) {
+                location.href = `/tests/{{quiz.id}}/result/${response.result}/`;
+            },
+            error: function (response) {
+                modal3.hide()
+                document.getElementById('error_modal_body').innerHTML = "Tizimda xatolik yuz berdi! Iltimos adminlarga murojat qiling.";
                 var modal2 = new bootstrap.Modal(document.getElementById('error_modal'));
                 modal2.show();
-                return;
             }
-            var modal3 = new bootstrap.Modal(document.getElementById('info_modal'));
-            modal3.show();
-            tests['csrfmiddlewaretoken'] = "{{ csrf_token }}";
+        });
+    }
+    document.querySelector('#submit_btn').addEventListener('click', sendData);
+
+
+    document.querySelectorAll('.send-feedback').forEach(btn => {
+        btn.addEventListener('click', e => {
+            e.preventDefault();
+            const question_id = e.target.parentElement.parentElement.querySelector('input[name="question_id"]').value;
+            const debug = e.target.parentElement.parentElement.querySelector('textarea[id="debug"]').value;
             $.ajax({
-                url: "/tests/{{quiz.id}}/submit/",
+                url: `/tests/{{quiz.id}}/feedback/`,
                 type: "POST",
-                data: tests,
-                success: function(response) {
-                    location.href = `/tests/{{quiz.id}}/result/${response.result}/`;
+                data: {
+                    question_id: question_id,
+                    debug: debug,
+                    csrfmiddlewaretoken: "{{ csrf_token }}"
                 },
-                error: function(response) {
-                    modal3.hide()
-                    document.getElementById('error_modal_body').innerHTML = "Tizimda xatolik yuz berdi! Iltimos adminlarga murojat qiling.";
-                    var modal2 = new bootstrap.Modal(document.getElementById('error_modal'));
-                    modal2.show();
+                success: function (response) {
+                    if(response.status === 'ok'){
+                        $.toast({
+                            heading: 'E\'tiroz yuborildi',
+                            text: response.msg,
+                            hideAfter: 5000,
+                            showHideTransition: 'fade',
+                            position: 'top-right',
+                            icon: 'success',
+                            loader: true,
+                        });
+                        document.querySelector('#feedback_btn'+btn.getAttribute('data-id')).parentElement.remove();
+                        document.querySelector('#sendBug'+btn.getAttribute('data-id')).remove();
+                        document.querySelector('.modal-backdrop').remove()
+                    } else{
+                        $.toast({
+                            heading: 'Xato',
+                            text: response.msg,
+                            hideAfter: 5000,
+                            showHideTransition: 'fade',
+                            position: 'top-right',
+                            icon: 'error',
+                            loader: true,
+                        })
+                    }
+                },
+                error: function (response) {
+                    console.log(response);
+                    alert("Xatolik yuz berdi! Iltimos adminlarga murojat qiling.");
                 }
             });
-        }
-        document.querySelector('#submit_btn').addEventListener('click', sendData);
-    </script>
+        });
+    });
+</script>
 {% endblock js %}
