--- a/templates/blog_tests/blog_test.html
+++ b/templates/blog_tests/blog_test.html
@@ -37,7 +37,10 @@
             </div>
             <div class="mt-3">
                 <b>Qoidalar!</b><br>
-                Salom Dunyo
+                <p class="fw-bold text-info">Test jarayonida boshqalardan ko'chirish mumkin emas. Natijalaringiz adminlar tomonidan ham tekshiriladi<p>
+                <p class="fw-bold text-info">Test jarayonida test oynasini tark etsangiz sizning testingizdan ball ayrilishi mumkin. Shu sababli test oynasini tark etish mumkin emas<p>
+
+                <p class="fw-bold text-info">Test jarayonida sizga berilgan vaqt tugab qoladigan bo'lsa va sizning belgilamagan javoblaringiz bo'lsa sizning belgilamagan javoblaringizni tizim tekshirmasdan o'tib ketadi!<p>
             </div>
         </div>
     </div>
