--- a/templates/colors.html
+++ b/templates/colors.html
@@ -170,4 +170,30 @@
     .card, .card table, .card tbody, .card tfoot, .card thead, .card tr, .card th, .card td {
         background-color: #e3eff8 !important;
     }
+    /* body{
+        background: url('/static/images/bg.png') !important;
+        background-repeat: no-repeat !important;
+        background-size: cover !important;
+    }
+    .navbar{
+        background-color: rgba(19, 18, 18, 0.35) !important;
+        backdrop-filter: blur(8.5px) !important;
+        -webkit-backdrop-filter: blur(8.5px) !important;
+        color: white !important;
+    }
+    .navbar *{
+        color: white ;
+    }
+    .navbar *:hover{
+        color: white;
+    }
+    .navbar *:active{
+        color: white;
+    }
+    .navbar *:focus{
+        color: white;
+    }
+    *{
+        color: white;
+    } */
 </style>
