--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -30,10 +30,10 @@
                                         placeholder="Foydalanuvchi nomingizni kiriting!" required>
                                 </div>
                                 <div class="col-12">
-                                    <label for="full_name" class="form-label">Ism familyangiz <span
+                                    <label for="email" class="form-label">Email manzilingiz <span
                                             class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" name="full_name" id="full_name" value="{{username}}"
-                                        placeholder="Ism familyangizni kiriting!" required>
+                                    <input type="email" class="form-control" name="email" id="email" value="{{email}}"
+                                        placeholder="Email manzilingizni kiriting!" required>
                                 </div>
                                 <div class="col-12">
                                     <label for="password" class="form-label">Parol <span
@@ -50,7 +50,7 @@
                                 {% endif %}
                                 <div class="col-12">
                                     <div class="d-grid">
-                                        <button class="btn btn-lg btn-primary" type="submit">Ro'yxatdan o'tish</button>
+                                        <button class="btn btn-lg btn-primary" type="submit">Davom etish</button>
                                     </div>
                                 </div>
                             </div>
